# uri-pathlib-factory

./: .all-contributorsrc  .copier-answers.yml  .flake8  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/source/: conf.py  index.md  installation.md  usage.md
src/uri_pathlib_factory/: __init__.py  main.py
tests/: conftest.py  pathlib_test_uri_backend.py  test_factory_path.py  test_factory_purepath.py  test_main.py  test_pathlib_patch_path.py  test_pathlib_patch_purepath.py
