[tool.poetry]
name = "uri-pathlib-factory"
version = "0.1.3"
description = "A factory to instantiate Path's like object that are using Pathlib interface."
authors = ["Pierre Verkest <pierreverkest84@gmail.com>"]
license = "Apache Software License 2.0"
readme = "README.md"
repository = "https://github.com/petrus-v/uri-pathlib-factory"
documentation = "https://uri-pathlib-factory.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "uri_pathlib_factory", from = "src" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/petrus-v/uri-pathlib-factory/issues"
"Changelog" = "https://github.com/petrus-v/uri-pathlib-factory/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = { version = "^6.0", python = "<3.10" }

# Documentation Dependencies
Sphinx = {version = "^5.0", optional = true}
sphinx-rtd-theme = {version = "^1.0", optional = true}
myst-parser = {version = "^0.18", optional = true}

[tool.poetry.extras]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^3.0"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "src/uri_pathlib_factory/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=uri_pathlib_factory --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.isort]
profile = "black"
known_first_party = ["uri_pathlib_factory", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/',
    'docs/source/',
    'setup.py',
    "tests/",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "docs.source.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
